<!-- Parent scrollview to allow content to be scrolled in landscape orientation -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.yugensoft.simplesleepjournal.ReportActivity">

    <TableLayout
        android:id="@+id/TL_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        >

        <TableRow>
            <TextView
                android:text="@string/label_time_period"
                />
            <Spinner
                android:layout_gravity="end"
                android:id="@+id/time_period_spinner"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/label_time_period_start"
                />
            <TextView
                android:id="@+id/time_period_start"
                android:layout_gravity="end"
                android:clickable="false"
                android:onClick="pickStartOfPeriod"
                android:text="@string/report_value_unknown"
                />

        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/label_time_period_end"
                />
            <TextView
                android:id="@+id/time_period_end"
                android:layout_gravity="end"
                android:clickable="false"
                android:onClick="pickEndOfPeriod"
                android:text="@string/report_value_unknown"
                />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/TL_report1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TL_period"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:stretchColumns="1"
        android:shrinkColumns="0"
        >

        <TableRow>
            <TextView
                android:text="@string/label_total_sleep"
                />
            <TextView
                android:id="@+id/total_sleep"
                android:layout_gravity="end"
                android:text="@string/report_value_unknown"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/label_average_sleep"
                />
            <TextView
                android:id="@+id/average_sleep"
                android:layout_gravity="end"
                android:text="@string/report_value_unknown"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/label_wakeup_compliance"
                />
            <TextView
                android:id="@+id/wakeup_compliance"
                android:layout_gravity="end"
                android:text="@string/report_value_unknown"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/label_bedtime_compliance"
                />
            <TextView
                android:id="@+id/bedtime_compliance"
                android:layout_gravity="end"
                android:text="@string/report_value_unknown"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/label_app_usage"
                />
            <TextView
                android:id="@+id/app_usage"
                android:layout_gravity="end"
                android:text="@string/report_value_unknown"
                />
        </TableRow>

    </TableLayout>

    <View style="@style/Divider"
        android:id="@+id/dividerA"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/TL_report1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/report_note"
        android:text="@string/report_note"
        android:layout_below="@id/dividerA"
        android:maxLines="100"
        android:ellipsize="none"
        android:scrollHorizontally="false"

        />

    <View style="@style/Divider"
        android:id="@+id/dividerB"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/report_note"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividerB"
        android:layout_marginTop="10dp"
        android:descendantFocusability="blocksDescendants"
        >
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_report_id">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

</RelativeLayout>
</ScrollView>