<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dialog_horizontal_margin"
    android:paddingRight="@dimen/dialog_horizontal_margin"
    android:paddingTop="@dimen/dialog_vertical_margin"
    android:paddingBottom="@dimen/dialog_vertical_margin"
    >

    <!-- Original record section -->
    <RelativeLayout
        android:id="@+id/RL_Original"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/original_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/original_label"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            />
        <TextView
            android:id="@+id/original_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/original_label"
            android:layout_toEndOf="@id/original_label"
            android:layout_alignParentTop="true"
            />

        <View style="@style/Divider"
            android:id="@+id/divider1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/original_record"

            />
    </RelativeLayout>

    <!-- Change/Add section -->
    <RelativeLayout
        android:id="@+id/RLInner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RL_Original"
        >

        <LinearLayout
            android:id="@+id/LL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/fragment_add_custom_target_date_label"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:text="@string/fragment_add_custom_target_time_label"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_changeable_textviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LL1"
            >

            <TextView style="@style/ChangeableTextview"
                android:id="@+id/date_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_add_custom_target_date_default_text"
                />

            <TextView style="@style/ChangeableTextview"
                android:id="@+id/time_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:text="@string/fragment_add_custom_target_time_default_text"/>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/RG1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/LL_changeable_textviews"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            >

            <RadioButton
                android:id="@+id/wakeup_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_add_custom_target_wakeup_label"
                android:layout_marginTop="5dp"/>


            <RadioButton
                android:id="@+id/bedtime_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_add_custom_target_bedtime_label"
                android:layout_marginTop="2dp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RG1"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:id="@+id/noon_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/noon_note"
                android:textColor="@color/note_colour"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/LL_changeable_textviews"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/ok_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_add_custom_target_ok"

                 />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_add_custom_target_cancel"
                />

            <!-- Delete button that appears if requested -->
            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                android:text="@string/fragment_add_custom_target_delete"
                />

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>