<!-- Parent scrollview to allow content to be scrolled in landscape orientation -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:id="@+id/LL_sleepstate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <TextView
                android:id = "@+id/current_state"
                android:text="@string/current_state_intial_text"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                />
            <ImageView
                android:id="@+id/sleep_state_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/sleep_state_image_desc"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_below="@id/current_state"
                />
            <TextView
                android:id="@+id/last_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sleep_state_image"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="right|center_vertical"
            >
            <Button style="@style/LargeButton"
                android:id = "@+id/bedtime_button"
                android:text = "@string/bedtime_button_text"
                android:onClick="onBedtime"
                />


            <Button style="@style/LargeButton"
                android:id = "@+id/awake_button"
                android:text = "@string/awake_button_text"
                android:onClick="onWakeup"
                />

        </LinearLayout>


    </LinearLayout>

    <View style="@style/Divider"
        android:id="@+id/divider1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />

    <LinearLayout
        android:id="@+id/LL_targets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/target_section_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/target_section_title"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/target_section_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/target_section_desc"
                android:layout_below="@id/target_section_title"
                />
            
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/targets_button"
                android:text="@string/targets_button_text"
                android:onClick="openTargets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />
            
        </RelativeLayout>
        
    </LinearLayout>

    <View style="@style/Divider"
        android:id="@+id/divider2"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />

    <LinearLayout
        android:id="@+id/LL_records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/record_section_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_section_title"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/record_section_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_section_desc"
                android:layout_below="@id/record_section_title"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <Button
                android:id = "@+id/records_button"
                android:text = "@string/records_report_button_text"
                android:onClick="openRecords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/Divider"
        android:id="@+id/divider3"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />

    <RelativeLayout
        android:id="@+id/RL_remainder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id = "@+id/report_button"
            android:text = "@string/report_button_text"
            android:onClick="openReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <Button
            android:id = "@+id/howto_button"
            android:text = "@string/howto_button_text"
            android:onClick="openHowToPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/report_button"
            android:layout_toEndOf="@id/report_button"
            />

    </RelativeLayout>

    <View style="@style/Divider"
        android:id="@+id/divider4"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        >
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_home_id">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>


</LinearLayout>

</ScrollView>